--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,12 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+# FOSuser configuration
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: AppBundle\Entity\Joueur
+    from_email:
+        address: "pierre.harvey12@gmail.com"
+        sender_name: "Pierre HARVEY"
